2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	When installing multiple themes at once, don't ask the user whether to
	apply after each theme. Instead, simply show a success message after
	installation has finished, and ask only if a single theme has been
	installed.

	* theme-installer.c: (gnome_theme_install_real),
	(transfer_done_cb): check whether there are multiple themes to install
	up front, and skip the apply dialog if so

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): also update the icon
	cache for icon themes with cursors

2007-10-30  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (file_theme_type), (gnome_theme_install_real):
	teach the installer to recognize cursor themes and icon themes with
	cursors and how to apply them

2007-10-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
	(icon_theme_changed), (update_cursor_size_scale),
	(cursor_theme_changed):
	* appearance-themes.c: (theme_selection_changed_cb):
	* theme-util.c: (theme_is_writable):
	* theme-util.h: simplify some more code, and fix a crash when the
	cursor theme in GConf is unset that I introduced in r8212

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list):
	* theme-util.c: (theme_is_writable), (theme_delete): simplify code
	thanks to the new unified theme type

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (changed_on_disk_cb): add support for live cursor
	theme updates

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (changed_on_disk_cb):
	* appearance-themes.c: (theme_changed_on_disk_cb): adapt to changes in
	theme change notification

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (cursor_size_scale_value_changed_cb),
	(update_cursor_size_scale), (cursor_theme_changed), (prepare_list):
	* appearance-themes.c: (theme_load_from_gconf):